add swagger and add apply in offer one time
